--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,14 +34,17 @@
   name = "github.com/crewjam/go-xmlsec"
 
 [[constraint]]
+  branch = "master"
+  name = "github.com/globalsign/mgo"
+
+[[constraint]]
   name = "github.com/gorilla/sessions"
   version = "1.2.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/kidstuff/mongostore"
 
 [prune]
   go-tests = true
   unused-packages = true
-
-[metadata.heroku]
-  root-package = "spidproject"
-  go-version = "1.12.7"
-  install = [ "./..." ]
